--- a/index.html
+++ b/index.html
@@ -1,134 +1,6 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Сантехник в Челябинске — вызов на дом, установка, ремонт, замена труб и сантехники. Доступные цены. Телефон: +7 (900) 123-45-67">
-    <title>Сантехник в Челябинске | Услуги 74</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #2b6cb0;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-        header p {
-            margin: 5px 0 0;
-            font-size: 1.1em;
-        }
-        nav {
-            background: #1a4f88;
-            text-align: center;
-            padding: 10px 0;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        section {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-            background: white;
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-        h2 {
-            color: #2b6cb0;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            background: url('data:image/svg+xml;utf8,<svg fill="green" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.285 2.709l-11.285 11.286-5.285-5.285-3.715 3.715 9 9 15-15z"/></svg>') no-repeat left center;
-            padding-left: 30px;
-            margin-bottom: 10px;
-            background-size: 18px;
-        }
-        .contact {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .contact a {
-            display: inline-block;
-            margin: 5px;
-            padding: 10px 15px;
-            background: #2b6cb0;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .contact a:hover {
-            background: #1a4f88;
-        }
-        footer {
-            background: #1a4f88;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-            margin-top: 20px;
-            font-size: 0.9em;
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>Сантехник в Челябинске</h1>
-    <p>Профессиональный ремонт и установка сантехники — быстро, качественно, недорого</p>
-</header>
-
-<nav>
-    <a href="#services">Услуги</a>
-    <a href="#about">Обо мне</a>
-    <a href="#contact">Контакты</a>
-</nav>
-
-<section id="services">
-    <h2>Мои услуги</h2>
-    <ul>
-        <li>Установка и замена унитазов, раковин, ванн, душевых кабин</li>
-        <li>Ремонт и замена труб (металл, пластик, полипропилен)</li>
-        <li>Монтаж смесителей, фильтров, водонагревателей</li>
-        <li>Устранение засоров, протечек</li>
-        <li>Подключение бытовой техники (стиральные, посудомоечные машины)</li>
-        <li>Профилактика и обслуживание сантехники</li>
-    </ul>
-</section>
-
-<section id="about">
-    <h2>Обо мне</h2>
-    <p>Меня зовут Алексей, я сантехник с 10-летним опытом работы в Челябинске и области. Работаю быстро и аккуратно, гарантирую честные цены и качественный результат. Выезд по городу и в пригород.</p>
-</section>
-
-<section id="contact">
-    <h2>Контакты</h2>
-    <div class="contact">
-        <p><strong>Телефон:</strong> <a href="tel:+79001234567">+7 (900) 123-45-67</a></p>
-        <p><strong>WhatsApp:</strong> <a href="https://wa.me/79001234567" target="_blank">Написать</a></p>
-        <p><strong>Email:</strong> <a href="mailto:santeh74@mail.ru">santeh74@mail.ru</a></p>
-    </div>
-</section>
-
-<footer>
-    &copy; 2025 Сантехник в Челябинске. Все права защищены.
-</footer>
-
-</body>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>Verification: d5ca0afcd6460cc4</body>
 </html>
