--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сантехника Челябинск</title>
-  
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 
 <body>
@@ -17,14 +17,21 @@
             <a href="#about">О нас</a>
             <a href="#contacts">Контакты</a>
         </nav>
-        <button class="btn">Заказать звонок</button>
+        <a href="tel:89080493134" class="btn phone-btn">
+            <span class="icon">📞</span> Вызвать мастера
+        </a>
     </header>
 
     <!-- Hero -->
     <section class="hero">
         <h1>Сантехника в Челябинске</h1>
-        <p>Установка, ремонт и обслуживание с гарантией</p>
-        <button class="btn">Вызвать мастера</button>
+        <p>Не переживайте, звонки бесплатные! 📞 Просто нажмите кнопку и узнайте стоимость услуг без лишних разговоров и
+            переплат.</p>
+
+        <!-- Кнопка с ценой -->
+        <a href="tel:89080493134" class="btn price-btn">
+            <span class="icon">💰</span> Узнать о ценах
+        </a>
     </section>
 
     <!-- Services -->
