--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сантехника Челябинск</title>
+    <title>Сантехнические работы и отопление! Челябинск</title>
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <div class="logo"><strong>Сантехника Челябинск</strong></div>
+        <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
         <nav>
             <a href="#services">Услуги</a>
             <a href="#about">О нас</a>
@@ -25,8 +25,8 @@
     <!-- Hero -->
     <section class="hero">
         <h1>Сантехника в Челябинске</h1>
-        <p>Не переживайте, звонки бесплатные! 📞 Просто нажмите кнопку и узнайте стоимость услуг без лишних разговоров и
-            переплат.</p>
+        <p>Звонок бесплатный! 📞 Нажмите кнопку и быстро узнайте, сколько стоят наши услуги — без ожидания и скрытых
+            платежей.</p>
 
         <!-- Кнопка с ценой -->
         <a href="tel:89080493134" class="btn price-btn">
@@ -36,28 +36,55 @@
 
     <!-- Services -->
     <section id="services" class="services">
-        <h2>Наши услуги</h2>
+        <h2>Популярные услуги</h2>
         <div class="service-cards">
-            <div class="card">
-                <h3>Установка сантехники</h3>
-                <p>Монтаж ванн, унитазов, раковин и смесителей.</p>
+
+            <div class="card water-meter-card">
+                <div class="card-image">
+                    <img src="./assets/img/vodochethick.jpg" alt="Замена водосчётчиков">
+                </div>
+                <h3>Замена водосчётчиков</h3>
+                <ul>
+                    <li>1 счётчик: 600+ (700 руб.)</li>
+                    <li>2 счётчика: 1000+ (1400 руб.)</li>
+                    <li>3 счётчика: 1500+ (2100 руб.)</li>
+                    <li>4 счётчика: 1900+ (2800 руб.)</li>
+                </ul>
             </div>
-            <div class="card">
-                <h3>Ремонт</h3>
-                <p>Быстро устраним любые поломки.</p>
+
+            <div class="card bath-install-card">
+                <div class="card-image">
+                    <img src="./assets/img/ZamenaVanni.png" alt="Установка ванны">
+                </div>
+                <h3>Установка ванны</h3>
+                <ul>
+                    <li>Цена: 1000–2500 руб.</li>
+                </ul>
+                <h3>Установка или замена смесителя на ванну</h3>
+                <ul>
+                    <li>Цена: 800 руб.</li>
+                </ul>
             </div>
-            <div class="card">
-                <h3>Замена труб</h3>
-                <p>Современные материалы и надежность.</p>
+            <div class="card toilet-install-card">
+                <div class="card-image">
+                    <img src="./assets/img/zamenaYnitaza.jpg" alt="Установка или замена унитаза">
+                </div>
+                <h3>Установка или замена унитаза</h3>
+                <ul>
+                    <li>Цена: 1500 руб.</li>
+                </ul>
             </div>
+     
+
         </div>
     </section>
 
     <!-- About -->
     <section id="about" class="about">
         <h2>О компании</h2>
-        <p>Мы более 10 лет помогаем жителям Челябинска решать любые задачи по сантехнике. Качественно, быстро и с
-            гарантией.</p>
+        <p>Более 10 лет выполняем сантехнические работы в Челябинске: монтаж и демонтаж радиаторов, разводка воды из
+            полипропилена, установка и ремонт санфаянса. Гарантия на все работы, официальные договоры. с 10:00 до 19:00.
+        </p>
     </section>
 
     <!-- Footer -->
@@ -72,7 +99,7 @@
                         <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">
                     </a>
                 </p>
-                <p>Челябинск</p>
+                <p>Работаем в Челябинске и пригороде!</p>
             </div>
             <div>
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor"
