--- a/index.html
+++ b/index.html
@@ -20,18 +20,32 @@
         <a href="tel:89080493134" class="btn phone-btn">
             <span class="icon">📞</span> Вызвать мастера
         </a>
+
     </header>
 
     <!-- Hero -->
     <section class="hero">
         <h1>Сантехника в Челябинске</h1>
-        <p>Звонок бесплатный! 📞 Нажмите кнопку и быстро узнайте, сколько стоят наши услуги — без ожидания и скрытых
-            платежей.</p>
+        <p>«Бесплатная помощь прямо сейчас! 📞»<br>
+            Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет от
+            профессионалов. <br>Решение рядом — действуйте прямо сейчас!</p>
 
         <!-- Кнопка с ценой -->
         <a href="tel:89080493134" class="btn price-btn">
-            <span class="icon">💰</span> Узнать о ценах
+            <span class="icon"></span> Позвонить и решить проблему
         </a>
+        <a href="https://vk.com/public101886759" target="_blank" class="btn vk-btn">
+            <span class="icon">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
+        </a>
+
+        <!-- Анимация воды -->
+        <div class="water-animation">
+            <span class="drop"></span>
+            <span class="drop"></span>
+            <span class="drop"></span>
+            <span class="drop"></span>
+            <span class="drop"></span>
+        </div>
     </section>
 
     <!-- Services -->
@@ -74,7 +88,7 @@
                     <li>Цена: 1500 руб.</li>
                 </ul>
             </div>
-     
+
 
         </div>
     </section>
