--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
     <header>
         <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
         <nav>
-            <a href="#services">Услуги</a>
-            <a href="#about">О нас</a>
-            <a href="#contacts">Контакты</a>
+            <a href="#services" class="nav-link">🛠 Услуги</a>
+            <a href="#about" class="nav-link">ℹ О нас</a>
+            <a href="#contacts" class="nav-link">📍 Контакты</a>
         </nav>
         <a href="tel:89080493134" class="btn phone-btn">
             <span class="icon">📞</span> Вызвать мастера
         </a>
-
     </header>
 
     <!-- Hero -->
     <section class="hero">
         <h1>Сантехника в Челябинске</h1>
         <p>«Бесплатная помощь прямо сейчас! 📞»<br>
-            Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет от
+            Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет
+            от
             профессионалов. <br>Решение рядом — действуйте прямо сейчас!</p>
 
         <!-- Кнопка с ценой -->
         <a href="tel:89080493134" class="btn price-btn">
             <span class="icon"></span> Позвонить и решить проблему
         </a>
+       
         <a href="https://vk.com/public101886759" target="_blank" class="btn vk-btn">
             <span class="icon">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
         </a>
@@ -59,11 +60,20 @@
                 </div>
                 <h3>Замена водосчётчиков</h3>
                 <ul>
-                    <li>1 счётчик: 600+ (700 руб.)</li>
-                    <li>2 счётчика: 1000+ (1400 руб.)</li>
-                    <li>3 счётчика: 1500+ (2100 руб.)</li>
-                    <li>4 счётчика: 1900+ (2800 руб.)</li>
+                    <li>1 счётчик – от 600</li>
+                    <li>2 счётчика – от 1000</li>
+                    <li>3 счётчика – от 1500</li>
+                    <li>4 счётчика – от 1900</li>
+                    <li>Стоимость счётчиков – от 1000</li>
                 </ul>
+            </div>
+
+            <div class="card toilet-install-card">
+                <div class="card-image">
+                    <img src="./assets/img/zamenaYnitaza.jpg" alt="Замена/установка унитаза">
+                </div>
+                <h3>Замена/установка унитаза</h3>
+                <p>Цена: от 2500</p>
             </div>
 
             <div class="card bath-install-card">
@@ -71,24 +81,42 @@
                     <img src="./assets/img/ZamenaVanni.png" alt="Установка ванны">
                 </div>
                 <h3>Установка ванны</h3>
-                <ul>
-                    <li>Цена: 1000–2500 руб.</li>
-                </ul>
-                <h3>Установка или замена смесителя на ванну</h3>
-                <ul>
-                    <li>Цена: 800 руб.</li>
-                </ul>
+                <p>Цена: от 2000</p>
+                <h3>Смесители</h3>
+                <p>В ванну: от 1500</p>
+                <p>В раковину: от 2000</p>
             </div>
-            <div class="card toilet-install-card">
+
+            <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/zamenaYnitaza.jpg" alt="Установка или замена унитаза">
+                    <img src="./assets/img/vodo-nagrevatel.jpg" alt="Установка водонагревателя">
                 </div>
-                <h3>Установка или замена унитаза</h3>
+                <h3>Установить водонагреватель</h3>
                 <ul>
-                    <li>Цена: 1500 руб.</li>
+                    <li>Цена: от 2500</li>
                 </ul>
             </div>
 
+            <div class="card extra-services-card">
+                <h3>Дополнительные услуги</h3>
+                <ul>
+                    <li>Минимальный выезд по работе: от 1000</li>
+                    <li>Инсталляция установить раму: от 2000</li>
+                    <li>Горшок: от 1500</li>
+                    <li>Разводка воды монтаж из полипропилена: от 8000</li>
+                    <li>Замена обвязок раковина и ванна: от 1000</li>
+                </ul>
+            </div>
+
+            <div class="card water-heater-card">
+                <div class="card-image">
+                    <img src="./assets/img/./razvodka-vodi.jpg" alt="Разводка воды">
+                </div>
+                <h3>Разводка воды</h3>
+                <ul>
+                    <li>Цена: от 3000</li>
+                </ul>
+            </div>
 
         </div>
     </section>
@@ -108,6 +136,7 @@
             <div>
                 <h3>Контакты</h3>
                 <p>Тел: <a href="tel:89080493134" style="color:#fff; text-decoration:none;">8 (908) 049-31-34</a></p>
+                <p>Тел: <a href="tel:235-00-67" style="color:#fff; text-decoration:none;">235-00-67</a></p>
                 <p>
                     <a href="https://vk.com/public101886759" target="_blank" class="vk-link">
                         <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">
