--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
        
         <a href="https://vk.com/public101886759" target="_blank" class="btn vk-btn">
-            <span class="icon">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
+             <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">  Наша активная группа ВКонтакте – присоединяйтесь!
         </a>
 
         <!-- Анимация воды -->
@@ -56,7 +56,7 @@
 
             <div class="card water-meter-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodochethick.jpg" alt="Замена водосчётчиков">
+                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков">
                 </div>
                 <h3>Замена водосчётчиков</h3>
                 <ul>
@@ -70,7 +70,7 @@
 
             <div class="card toilet-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/zamenaYnitaza.jpg" alt="Замена/установка унитаза">
+                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза">
                 </div>
                 <h3>Замена/установка унитаза</h3>
                 <p>Цена: от 2500</p>
@@ -78,7 +78,7 @@
 
             <div class="card bath-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/ZamenaVanni.png" alt="Установка ванны">
+                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны">
                 </div>
                 <h3>Установка ванны</h3>
                 <p>Цена: от 2000</p>
@@ -89,7 +89,7 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodo-nagrevatel.jpg" alt="Установка водонагревателя">
+                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя">
                 </div>
                 <h3>Установить водонагреватель</h3>
                 <ul>
@@ -110,7 +110,7 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/./razvodka-vodi.jpg" alt="Разводка воды">
+                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды">
                 </div>
                 <h3>Разводка воды</h3>
                 <ul>
