--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сантехнические работы и отопление! Челябинск</title>
+    <meta name="description"
+        content="Сантехнические работы в Челябинске: замена счётчиков, установка унитаза, монтаж ванн, разводка воды и отопление. Быстрый выезд мастера – звоните 8 (908) 049-31-34">
+        <meta name="keywords" content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
+    <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -34,9 +36,9 @@
         <a href="tel:89080493134" class="btn price-btn">
             <span class="icon"></span> Позвонить и решить проблему
         </a>
-       
+
         <a href="https://vk.com/public101886759" target="_blank" class="btn vk-btn">
-             <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">  Наша активная группа ВКонтакте – присоединяйтесь!
+            <span class="icon">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
         </a>
 
         <!-- Анимация воды -->
