--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- добавлено -->
     <meta name="description"
         content="Сантехнические работы в Челябинске: замена счётчиков, установка унитаза, монтаж ванн, разводка воды и отопление. Быстрый выезд мастера – звоните 8 (908) 049-31-34">
-        <meta name="keywords" content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
+    <meta name="keywords"
+        content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
     <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon.png">
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:image" content="https://santehnika-74.ru/assets/img/previe.webp">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+
 </head>
 
 <body>
@@ -33,15 +47,16 @@
             профессионалов. <br>Решение рядом — действуйте прямо сейчас!</p>
 
         <!-- Кнопка с ценой -->
-        <a href="tel:89080493134" class="btn price-btn">
-            <span class="icon"></span> Позвонить и решить проблему
+        <a href="tel:89080493134" class="btn vk-btn" aria-label="Позвонить мастеру сантехнику">
+            <span class="icon" aria-hidden="true">📞</span> Вызвать мастера
         </a>
 
-        <a href="https://vk.com/public101886759" target="_blank" class="btn vk-btn">
-            <span class="icon">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
+        <a href="https://vk.com/public101886759" target="_blank" rel="noopener noreferrer" class="btn vk-btn"
+            aria-label="Группа ВКонтакте">
+            <span class="icon" aria-hidden="true">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
         </a>
-
-        <!-- Анимация воды -->
+        <!-- 
+        Анимация воды -->
         <div class="water-animation">
             <span class="drop"></span>
             <span class="drop"></span>
@@ -58,7 +73,8 @@
 
             <div class="card water-meter-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков">
+                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков" width="300" height="200"
+                        loading="lazy">
                 </div>
                 <h3>Замена водосчётчиков</h3>
                 <ul>
@@ -72,7 +88,8 @@
 
             <div class="card toilet-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза">
+                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза" width="300" height="200"
+                        loading="lazy">
                 </div>
                 <h3>Замена/установка унитаза</h3>
                 <p>Цена: от 2500</p>
@@ -80,7 +97,8 @@
 
             <div class="card bath-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны">
+                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны" width="300" height="200"
+                        loading="lazy">
                 </div>
                 <h3>Установка ванны</h3>
                 <p>Цена: от 2000</p>
@@ -91,7 +109,8 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя">
+                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя" width="300"
+                        height="200" loading="lazy">
                 </div>
                 <h3>Установить водонагреватель</h3>
                 <ul>
@@ -112,7 +131,8 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды">
+                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды" width="300" height="200"
+                        loading="lazy">
                 </div>
                 <h3>Разводка воды</h3>
                 <ul>
@@ -140,15 +160,15 @@
                 <p>Тел: <a href="tel:89080493134" style="color:#fff; text-decoration:none;">8 (908) 049-31-34</a></p>
                 <p>Тел: <a href="tel:235-00-67" style="color:#fff; text-decoration:none;">235-00-67</a></p>
                 <p>
-                    <a href="https://vk.com/public101886759" target="_blank" class="vk-link">
+                    <a href="https://vk.com/public101886759" target="_blank" rel="noopener noreferrer" class="vk-link">
                         <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">
                     </a>
                 </p>
                 <p>Работаем в Челябинске и пригороде!</p>
             </div>
             <div>
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor"
-                    height="200"></iframe>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor" height="200"
+                    loading="lazy" title="Карта Челябинска — область обслуживания"></iframe>
             </div>
         </div>
     </footer>
