--- a/index.html
+++ b/index.html
@@ -10,18 +10,6 @@
         content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
     <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
     <link rel="stylesheet" href="./style.css">
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon.png">
-    <meta name="theme-color" content="#0d6efd">
-
-    <meta property="og:image" content="https://santehnika-74.ru/assets/img/previe.webp">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="512">
-    <meta property="og:image:height" content="512">
-
 </head>
 
 <body>
@@ -55,8 +43,8 @@
             aria-label="Группа ВКонтакте">
             <span class="icon" aria-hidden="true">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
         </a>
-        <!-- 
-        Анимация воды -->
+
+        <!-- Анимация воды -->
         <div class="water-animation">
             <span class="drop"></span>
             <span class="drop"></span>
@@ -73,8 +61,7 @@
 
             <div class="card water-meter-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков" width="300" height="200"
-                        loading="lazy">
+                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков">
                 </div>
                 <h3>Замена водосчётчиков</h3>
                 <ul>
@@ -88,8 +75,7 @@
 
             <div class="card toilet-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза" width="300" height="200"
-                        loading="lazy">
+                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза">
                 </div>
                 <h3>Замена/установка унитаза</h3>
                 <p>Цена: от 2500</p>
@@ -97,8 +83,7 @@
 
             <div class="card bath-install-card">
                 <div class="card-image">
-                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны" width="300" height="200"
-                        loading="lazy">
+                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны">
                 </div>
                 <h3>Установка ванны</h3>
                 <p>Цена: от 2000</p>
@@ -109,8 +94,7 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя" width="300"
-                        height="200" loading="lazy">
+                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя">
                 </div>
                 <h3>Установить водонагреватель</h3>
                 <ul>
@@ -131,8 +115,7 @@
 
             <div class="card water-heater-card">
                 <div class="card-image">
-                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды" width="300" height="200"
-                        loading="lazy">
+                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды">
                 </div>
                 <h3>Разводка воды</h3>
                 <ul>
@@ -167,8 +150,8 @@
                 <p>Работаем в Челябинске и пригороде!</p>
             </div>
             <div>
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor" height="200"
-                    loading="lazy" title="Карта Челябинска — область обслуживания"></iframe>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor"
+                    height="200"></iframe>
             </div>
         </div>
     </footer>
