--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
+        <div class="logo"><strong>Сантехнические работы и отопление! Челябинск2</strong></div>
         <nav>
             <a href="#services" class="nav-link">🛠 Услуги</a>
             <a href="#about" class="nav-link">ℹ О нас</a>
