--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
         <a href="tel:89080493134" class="btn phone-btn">
             <span class="icon">📞</span> Вызвать мастера
         </a>
+        
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript">
+            (function (m, e, t, r, i, k, a) {
+                m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+                m[i].l = 1 * new Date();
+                for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+                k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+            })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=104005738', 'ym');
+
+            ym(104005738, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", accurateTrackBounce: true, trackLinks: true });
+        </script>
+        <noscript>
+            <div><img src="https://mc.yandex.ru/watch/104005738" style="position:absolute; left:-9999px;" alt="" />
+            </div>
+        </noscript>
+        <!-- /Yandex.Metrika counter -->
     </header>
 
     <!-- Hero -->
