--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
         <nav>
-            <a href="#services" class="nav-link">🛠 Услуги</a>
+            <a href="#services" class="nav-link">🛠 Услуги2</a>
             <a href="#about" class="nav-link">ℹ О нас</a>
             <a href="#contacts" class="nav-link">📍 Контакты</a>
         </nav>
