--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <meta name="keywords"
         content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
     <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
+
+    <link rel="icon" href="https://santehnika-74.ru/assets/img/favicon.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
@@ -17,7 +21,7 @@
     <header>
         <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
         <nav>
-            <a href="#services" class="nav-link">🛠 Услуги2</a>
+            <a href="#services" class="nav-link">🛠 Услуги</a>
             <a href="#about" class="nav-link">ℹ О нас</a>
             <a href="#contacts" class="nav-link">📍 Контакты</a>
         </nav>
