3 попытка загрузить иконки

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
     <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="https://santehnika-74.ru/assets/img/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://santehnika-74.ru/assets/img/favicon.png">
-    <link rel="apple-touch-icon" href="https://santehnika-74.ru/assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://santehnika-74.ru/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://santehnika-74.ru/assets/img/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
 
     <link rel="stylesheet" href="./style.css">
 
