--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
         content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
     <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="https://santehnika-74.ru/assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://santehnika-74.ru/assets/img/favicon-16x16.png">
-    <link rel="apple-touch-icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
+   
+    
+
+
+    <link type="image/x-icon" rel="shortcut icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
+    <link type="image/png" sizes="16x16" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-16x16.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-32x32.png">
+    <link type="image/png" sizes="96x96" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-96x96.png">
+    <link type="image/png" sizes="120x120" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-120x120.png">
 
     <link rel="stylesheet" href="./style.css">
 
