--- a/index.html
+++ b/index.html
@@ -2,27 +2,43 @@
 <html lang="ru">
 
 <head>
+    <!-- Основные мета-теги -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- добавлено -->
-    <meta name="description"
-        content="Сантехнические работы в Челябинске: замена счётчиков, установка унитаза, монтаж ванн, разводка воды и отопление. Быстрый выезд мастера – звоните 8 (908) 049-31-34">
-    <meta name="keywords"
-        content="сантехник Челябинск, установка унитаза, замена счётчиков, ремонт ванной, сантехнические услуги">
-    <title>Сантехнические работы в Челябинске – установка, замена, ремонт</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Сантехник Челябинск: установка унитаза, замена водосчётчиков, монтаж ванн, разводка воды и отопление. Бесплатный выезд мастера.">
+    <meta name="keywords" content="сантехник Челябинск, сантехнические услуги, замена счётчиков, установка ванн, монтаж отопления, ремонт ванной, вызов мастера">
+    <meta name="author" content="Сантехник Челябинск">
 
-   
-    
+    <title>Сантехнические работы и отопление в Челябинске – установка, замена, ремонт</title>
 
-
+    <!-- Фавиконы -->
     <link type="image/x-icon" rel="shortcut icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
     <link type="image/png" sizes="16x16" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-16x16.png">
     <link type="image/png" sizes="32x32" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-32x32.png">
     <link type="image/png" sizes="96x96" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-96x96.png">
     <link type="image/png" sizes="120x120" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-120x120.png">
+    <link rel="apple-touch-icon" href="https://santehnika-74.ru/assets/img/favicon-120x120.png">
 
+    <!-- Соцсети: Open Graph (Facebook, VK, Telegram) -->
+    <meta property="og:title" content="Сантехнические работы и отопление в Челябинске">
+    <meta property="og:description" content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды.">
+    <meta property="og:image" content="https://santehnika-74.ru/assets/img/hero-image.jpg">
+    <meta property="og:url" content="https://santehnika-74.ru/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Сантехнические работы и отопление в Челябинске">
+    <meta name="twitter:description" content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды.">
+    <meta name="twitter:image" content="https://santehnika-74.ru/assets/img/hero-image.jpg">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://santehnika-74.ru/">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
-
 </head>
+
 
 <body>
     <!-- Header -->
