--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <h1>Сантехника в Челябинске</h1>
+        <h1>Сантехника и отопление в Челябинске – установка, замена, ремонт</h1>
         <p>«Бесплатная помощь прямо сейчас! 📞»<br>
             Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет
             от
