--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="сантехник Челябинск, сантехнические услуги, замена счётчиков, установка ванн, монтаж отопления, ремонт ванной, вызов мастера">
     <meta name="author" content="Сантехник Челябинск">
 
-    <title>Сантехнические работы и отопление в Челябинске – установка, замена, ремонт</title>
+    <title>Сантехнические работы и отопление в Челябинске<br> – установка, замена, ремонт</title>
 
     <!-- Фавиконы -->
     <link type="image/x-icon" rel="shortcut icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
@@ -101,7 +101,7 @@
 
     <!-- Services -->
     <section id="services" class="services">
-        <h2>Популярные услуги</h2>
+        <h3>Популярные услуги</h3>
         <div class="service-cards">
 
             <div class="card water-meter-card">
@@ -173,7 +173,7 @@
 
     <!-- About -->
     <section id="about" class="about">
-        <h2>О компании</h2>
+        <h3>О компании</h3>
         <p>Более 10 лет выполняем сантехнические работы в Челябинске: монтаж и демонтаж радиаторов, разводка воды из
             полипропилена, установка и ремонт санфаянса. Гарантия на все работы, официальные договоры. с 10:00 до 19:00.
         </p>
