--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <h1>Сантехника и отопление в Челябинске – установка, замена, ремонт</h1>
+        <h1>Сантехника и отопление в Челябинске<br> – установка, замена, ремонт</h1>
         <p>«Бесплатная помощь прямо сейчас! 📞»<br>
             Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет
             от
@@ -101,7 +101,7 @@
 
     <!-- Services -->
     <section id="services" class="services">
-        <h3>Популярные услуги</h3>
+        <h2>Популярные услуги</h2>
         <div class="service-cards">
 
             <div class="card water-meter-card">
@@ -173,7 +173,7 @@
 
     <!-- About -->
     <section id="about" class="about">
-        <h3>О компании</h3>
+        <h2>О компании</h2>
         <p>Более 10 лет выполняем сантехнические работы в Челябинске: монтаж и демонтаж радиаторов, разводка воды из
             полипропилена, установка и ремонт санфаянса. Гарантия на все работы, официальные договоры. с 10:00 до 19:00.
         </p>
@@ -184,7 +184,7 @@
     <footer id="contacts">
         <div class="grid">
             <div>
-                <h3>Контакты</h3>
+                <h2>Контакты</h2>
                 <p>Тел: <a href="tel:89080493134" style="color:#fff; text-decoration:none;">8 (908) 049-31-34</a></p>
                 <p>Тел: <a href="tel:235-00-67" style="color:#fff; text-decoration:none;">235-00-67</a></p>
                 <p>
